--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -17,8 +17,8 @@ $attribute-color: #FF0000;
 $arrow-active-color: #69C2BB;
 $tag-active-color: #FF9999;
 $attribute-active-color: #BBA5C5;
-// css colors
 
+// css colors
 $value-color: #0000CD;
 $property-color: #FF0000;
 $selector-color: #AD2A2A;
@@ -26,9 +26,6 @@ $selector-color: #AD2A2A;
 $value-active-color: #69C2BB;
 $property-active-color: #BBA5C5;
 $selector-active-color: #FF9999;
-// js colors
-
-// vars
 
 // python colors
 $statement-color: #0000CD;
@@ -50,3 +47,6 @@ $selection-active-color: #69C2BB;
 $php-color: #FFC0C7;
 $jquery-color: #FFF4A3;
 $java-color: #F3ECEA;
+$cpp-color: #D9EEE1;
+$w3css-color: #96D4D4;
+$bootstrap-color: #E7E9EB;
