--- a/scss/style.scss
+++ b/scss/style.scss
@@ -205,19 +205,7 @@ body {
     }
 }
 
-.spacer {
-    aspect-ratio: 960/300;
-    width: 100%;
-    height: 50px;
-    // background-image: url('imgs/logo.png');
-    // background-repeat: no-repeat;
-    // background-position: center;
-    // background-size: cover;
-    overflow: hidden;
-}
-
-.html, .css, .javaScript, .python, .sql {
-    // transform: translateY(-7px);
+.box {
     @include flex(row);
     justify-content: space-evenly;
     align-items: flex-start;
@@ -226,6 +214,7 @@ body {
     width: 100%;
     padding: 80px 100px;
     .content {
+        width: 480px;
         @include flex(column);
         .title {
             font-size: 100px;
@@ -395,25 +384,76 @@ body {
 }
 
 .javaScript {
-    .title {
-        font-size:80px !important;
-        color: #fff;
-    }
-    .subtitle {
-        color: #fff;
-    }
     background: $js-color;
-    height: 530px;
-    .content {
-        .buttons {
-            color: #fff;
-            .btn.reference {
-                background: #fff;
-                color: #000; 
-                &:hover {
-                    background: rgb(207, 205, 205);
-                }
+    color: #fff;
+    .title {
+        font-size: 70px !important;
+        margin-bottom: 10px;
+    }
+    .buttons {
+        .btn.reference {
+            color: #000 !important;
+            background: #E7E9EB !important  ;
+        }
+    }
+    .example {
+        h1   {
+            color: #000 !important;
+        }
+    }
+    .example_code.active {
+        background: $code-dark-window;
+        border-color: transparent;  
+        code {
+            color: #fff !important;;
+            .arrow, .tag, .attribute, .property, .keyword, .value {
+                font-family: 'Inconsolata', monospace;
             }
+            span.arrow {
+                color: $arrow-active-color;
+            }
+            span.tag {
+                color: $tag-active-color;
+            }
+            span.attribute {
+                color: $attribute-active-color;
+            }
+            span.property {
+                color: $value-active-color;
+            }
+            span.keyword {
+                color: $attribute-active-color;;
+            }
+            span.value {
+                color: $value-active-color;
+            }
+        }
+    }
+    code {
+        color: #000 !important;
+        font-family: 'Inconsolata', monospace;
+        font-size: 18px;
+        .arrow, .tag, .attribute, .property, .keyword, .value {
+            font-size: 18px;
+            font-family: 'Inconsolata', monospace;
+        }
+        span.arrow {
+            color: $arrow-color;
+        }
+        span.tag {
+            color: $tag-color;
+        }
+        span.attribute {
+            color: $attribute-color;
+        }
+        span.property {
+            color: $value-color;
+        }
+        span.keyword {
+            color: $value-color;
+        }
+        span.value {
+            color: $tag-color;
         }
     }
 }
@@ -505,6 +545,7 @@ body {
     background: $body-color;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    row-gap: 50px;
     place-items: center;
     .library {
         @include flex(column);
@@ -517,10 +558,13 @@ body {
         box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
         .title {
             font-size: 45px;
+            margin-bottom: 20px;
         }
 
         .subtitle {
             font-size: 18px;
+            color: #3A3A3A;
+            margin-bottom: 16px;
         }
 
         .btn {
@@ -544,5 +588,15 @@ body {
         &.java {
             background: $java-color;
         }
+        &.cpp {
+            background: $cpp-color;
+        }
+        &.w3css {
+            background: $w3css-color;
+        }
+        &.bootstrap {
+            background: $bootstrap-color;
+        }
     }
 }
+
