--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -50,3 +50,9 @@ $java-color: #F3ECEA;
 $cpp-color: #D9EEE1;
 $w3css-color: #96D4D4;
 $bootstrap-color: #E7E9EB;
+
+$danger-color: #E9B1B8;
+$alert-color: #FFF4A3;
+$muted-color: #F3ECEA;
+$decayed-color: #D9EEE1;
+$aqua-color: #8BC3C4;
