--- a/css/style.css
+++ b/css/style.css
@@ -744,17 +744,58 @@ body {
 
 .libraries {
   width: 100%;
-  height: auto;
-  padding: 64px 0;
+  height: 2000px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   background: #282A35;
+  position: relative;
+}
+.libraries .languages {
+  padding: 100px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
+  -ms-grid-columns: 1fr 50px 1fr;
   grid-template-columns: repeat(2, 1fr);
-  row-gap: 50px;
+  row-gap: 60px;
+  -webkit-column-gap: 50px;
+     -moz-column-gap: 50px;
+          column-gap: 50px;
   place-items: center;
+  width: 75%;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  position: relative;
+  border: 1px solid red;
 }
-.libraries .library {
+.libraries .languages .library {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -769,24 +810,24 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   max-width: 700px;
-  min-width: 470px;
-  width: 90%;
+  min-width: 500px;
+  width: 100%;
   height: 265px;
-  padding: 24px;
+  padding: 24px 30px;
   border-radius: 8px;
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
-.libraries .library .title {
+.libraries .languages .library .title {
   font-size: 45px;
   margin-bottom: 20px;
 }
-.libraries .library .subtitle {
+.libraries .languages .library .subtitle {
   font-size: 18px;
   color: #3A3A3A;
   margin-bottom: 16px;
 }
-.libraries .library .btn {
+.libraries .languages .library .btn {
   width: 200px;
   margin-top: 30px;
   background: #282A35;
@@ -797,21 +838,75 @@ body {
   border: none;
   border-radius: 25px;
 }
-.libraries .library.php {
+.libraries .languages .library.php {
   background: #FFC0C7;
 }
-.libraries .library.jquery {
+.libraries .languages .library.jquery {
   background: #FFF4A3;
 }
-.libraries .library.java {
+.libraries .languages .library.java {
   background: #F3ECEA;
 }
-.libraries .library.cpp {
+.libraries .languages .library.cpp {
   background: #D9EEE1;
 }
-.libraries .library.w3css {
+.libraries .languages .library.w3css {
   background: #96D4D4;
 }
-.libraries .library.bootstrap {
+.libraries .languages .library.bootstrap {
   background: #E7E9EB;
+}
+.libraries .languages_menu {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 50px 1fr 50px 1fr 50px 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  place-items: center;
+  width: 75%;
+  row-gap: 60px;
+  -webkit-column-gap: 50px;
+     -moz-column-gap: 50px;
+          column-gap: 50px;
+  border: 1px solid red;
+}
+.libraries .languages_menu .language {
+  border: 1px solid red;
+  min-width: 185px;
+  width: 100%;
+  max-width: 266px;
+  height: 113px;
+  padding: 24px 30px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  font-size: 30px;
+  font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.libraries .languages_menu .language.red {
+  background: #E9B1B8;
+}
+.libraries .languages_menu .language.yellow {
+  background: #FFF4A3;
+}
+.libraries .languages_menu .language.grey {
+  background: #F3ECEA;
+}
+.libraries .languages_menu .language.green {
+  background: #D9EEE1;
+}
+.libraries .languages_menu .language.blue {
+  background: #8BC3C4;
 }
