--- a/scss/style.scss
+++ b/scss/style.scss
@@ -405,7 +405,7 @@ body {
         background: $code-dark-window;
         border-color: transparent;  
         code {
-            color: #fff !important;;
+            color: #fff !important;
             .arrow, .tag, .attribute, .property, .keyword, .value {
                 font-family: 'Inconsolata', monospace;
             }
@@ -540,62 +540,111 @@ body {
 
 .libraries {
     width: 100%;
-    height: auto;
-    padding: 64px 0;
+    height: 2000px;
+    @include flex(column);
+    justify-content: flex-start;
     background: $body-color;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    row-gap: 50px;
-    place-items: center;
-    .library {
-        @include flex(column);
-        max-width: 700px;
-        min-width: 470px;
-        width: 90%;
-        height: 265px;
-        padding: 24px;
-        border-radius: 8px;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-        .title {
-            font-size: 45px;
-            margin-bottom: 20px;
+    position: relative;
+    .languages {
+        padding: 100px 0;
+        @include flex(row);
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 60px;
+        column-gap: 50px;
+        place-items: center;
+        width: 75%;
+        height: max-content;
+        position: relative;
+        border: 1px solid red;
+        .library {
+            @include flex(column);
+            max-width: 700px;
+            min-width: 500px;
+            width: 100%;
+            height: 265px;
+            padding: 24px 30px;
+            border-radius: 8px;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+            .title {
+                font-size: 45px;
+                margin-bottom: 20px;
+            }
+    
+            .subtitle {
+                font-size: 18px;
+                color: #3A3A3A;
+                margin-bottom: 16px;
+            }
+    
+            .btn {
+                width: 200px;
+                margin-top: 30px;
+                background: $body-color;
+                color: #fff;
+                font-size: 18px;
+                padding: 8px 16px;
+                outline: none;
+                border: none;
+                border-radius: 25px;
+            }
+    
+            &.php {
+                background: $php-color;
+            }
+            &.jquery {
+                background: $jquery-color;
+            }
+            &.java {
+                background: $java-color;
+            }
+            &.cpp {
+                background: $cpp-color;
+            }
+            &.w3css {
+                background: $w3css-color;
+            }
+            &.bootstrap {
+                background: $bootstrap-color;
+            }
         }
-
-        .subtitle {
-            font-size: 18px;
-            color: #3A3A3A;
-            margin-bottom: 16px;
-        }
-
-        .btn {
-            width: 200px;
-            margin-top: 30px;
-            background: $body-color;
-            color: #fff;
-            font-size: 18px;
-            padding: 8px 16px;
-            outline: none;
-            border: none;
-            border-radius: 25px;
-        }
-
-        &.php {
-            background: $php-color;
-        }
-        &.jquery {
-            background: $jquery-color;
-        }
-        &.java {
-            background: $java-color;
-        }
-        &.cpp {
-            background: $cpp-color;
-        }
-        &.w3css {
-            background: $w3css-color;
-        }
-        &.bootstrap {
-            background: $bootstrap-color;
+    }
+    .languages_menu {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        place-items: center;
+        width: 75%;
+        row-gap: 60px;
+        column-gap: 50px;
+        border: 1px solid red;
+        .language {
+            border: 1px solid red;
+            min-width: 185px;
+            width: 100%;
+            max-width: 266px;
+            height: 113px;
+            padding: 24px 30px;
+            border-radius: 8px;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+            font-size: 30px;
+            font-weight: 500;
+            @include flex(row);
+            &.red {
+                background: $danger-color;
+            }
+            &.yellow {
+                background: $alert-color;
+            }
+            &.grey {
+                background: $muted-color;
+            }
+            &.green {
+                background: $decayed-color;
+            }
+            &.blue {
+                background: $aqua-color;
+            }
+            
         }
     }
 }
